--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-     <img src="../links-and-images/lasagna.jpg" alt="tasty looking lasagna">
+     <img src="../links-and-images/lasagna.jpg" alt="bigass pic of lasagna">
      <h2>How to make the best (according to recipes.com) lasagna ever</h2>
-     <p>I really dont have much more to say about this recipe. 
-         It looks really tasty but im on a diet and am too lazy to make it. 
-         If youre reading this, theres prob a better lasagna recipe out there.</p>
+     <p>It looks really tasty but im on a diet and am too lazy to make it. </p>
          <h3>Ingredients</h3>
          <ul>
              <li>1 pound sweet italian sausage</li>
