--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>index</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>3 Plagiarized Recipes</h1>
+    <img src="links-and-images/Chef.jpg">
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/spatchcock-chicken.html">Spatchcock Chicken</a></li>
